--- a/estilos/dark.css
+++ b/estilos/dark.css
@@ -13,7 +13,7 @@
   --bg-table-l2: #374122;
   --border-radius: 4px;
 }
-div {
+html {
   padding: 15%;
   background-color: var(--main-bg-color);
   color: var(--color-text-primary);
