--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -13,6 +13,13 @@
   font-size: 17px;
   margin-bottom: 35px;
 }
+
+
+.setter {
+  position: fixed;
+  text-align: right;
+  background-color:none;
+}
  blockquote {
   margin-left: 1.75px;
   margin-right: 0px;
@@ -36,6 +43,7 @@
   background-color: var(--contrast-bg-color);
   padding: 3px;
 }
+
  img {
   margin-left: auto;
   margin-right: auto;
