--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -47,11 +47,12 @@
  img {
   margin-left: auto;
   margin-right: auto;
+  margin-block:20px,
 }
  .cornell {
   width: 100% !important;
   display: inline-flex;
-  margin-bottom: 30px;
+  margin-block: 30px;
 }
  .cornell * {
   border-radius: var(--border-radius);
