--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -50,7 +50,7 @@
   margin-block:20px,
 }
  .cornell {
-  width: 100% !important;
+  width: 100%;
   display: inline-flex;
   margin-block: 30px;
 }
@@ -59,7 +59,7 @@
   margin-block: 0;
 }
  .ask {
-  max-width: 33% !important;
+  max-width: 33%;
   fill: aqua;
   color: var(--color-text-primary);
   background: var(--contrast-bg-color);
@@ -84,6 +84,30 @@
   text-align: left;
   margin-inline: 15px;
 }
+
+.summary {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  border-bottom: 2px solid var(--text-color-resalt);
+}
+
+.summary > *{
+padding: 4%;
+}
+
+.summary .cornell{
+  display: inline-block;
+  width: auto;
+}
+.summary .cornell .ask, .summary .cornell .rta {
+  margin-inline: auto;
+  width: auto;
+}
+
+.summary .cornell hr {
+  height: 7px;
+  width: auto;
+}
  a[href] {
   text-decoration: none;
   color: var(--text-color-resalt);
@@ -100,6 +124,7 @@
   margin: 0;
   padding: 0;
   background-color: var(--bg-table-tr);
+  
 }
  table tr th {
   font-weight: bold;
@@ -108,6 +133,7 @@
   margin: 0;
   padding: 6px 13px;
   font-size: 20px;
+  
 }
  table tr td {
   border: 1px solid var(--dark-border);
@@ -118,6 +144,12 @@
  table tr th:first-child,
  table tr td:first-child {
   margin-top: 0;
+}
+
+table tr td:first-child {
+  font-weight: bold;
+  font-size: 22px;
+  text-align: center;
 }
  table tr th:last-child,
  table tr td:last-child {
@@ -157,3 +189,24 @@
 }
 
 img {max-width: -webkit-fill-available;}
+
+iframe{
+  margin-block:80px;
+  width: 100%;
+  height: 900px;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .summary {
+    display: block;
+  }
+
+  table tr td{
+    display: block;
+  }
+
+  table tr th {
+    display: none;
+  }
+}
