--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -197,7 +197,7 @@ iframe{
 }
 
 
-@media only screen and (max-width: 600px) {
+@media screen and (min-width: 600px) {
   .summary {
     display: block;
   }
