cambio git ignore

--- a/TEMPLATE/index.html
+++ b/TEMPLATE/index.html
@@ -24,7 +24,7 @@
 
 
     <a href="preguntas.html"> ❓ Preguntas</a>
-    <div class="wrapper">
+    <div class="wrapper menu">
         <a href="example.html">
          example.html
         </a>
